P3/test/pl0/error/error31.pl0
var a;

begin
	a:=11111111111111111111;
end.
